# mle-training

./: Assignment_3_1.ipynb  Dockerfile  README.md  assignment_1_1_git  assignment_1_1_miniconda  assignment_1_1_unix_shell  nonstandardcode.py
Assignment_1_1/: assignment_1_1_git  assignment_1_1_miniconda  assignment_1_1_unix_shell
Assignment_1_2/: .gitignore  README.md  environment.yml  nonstandardcode.py
Assignment_1_4/: nonstandardcode.py  settings.json
Assignment_2_1/: env.yml
Assignment_3_1/: env.yml  pyproject.toml  setup.cfg  setup.py
Assignment_5_1/: setup.cfg  tasks.py
Assignment_5_2/: pyproject.toml  tasks.py
Assignment_5_2/artifacts/: housing_labels.pkl  lin_reg_op.pkl  param_distribs.pkl  y_test.pkl
Assignment_5_2/deploy/conda/: env.yml
Assignment_5_2/notebooks/dev/venkatesh_talasila/: 02_data_processing.ipynb  custom_transformer.py  decision_tree_regressor_report.html  feature_analysis_bivariate.html  feature_analysis_report.html  feature_analysis_univariate.html  housing.html  random_forest_regressor_report.html  regression_comparison.html  regression_linear_model_report.html  scripts.py  unit_test.py
Assignment_5_2/notebooks/dev/venkatesh_talasila/conf/: config.yml
Assignment_5_2/notebooks/dev/venkatesh_talasila/conf/data_catalog/: local.yml  local.ymlZone.Identifier
Assignment_5_2/notebooks/dev/venkatesh_talasila/conf/grid_search/: local.yml
Assignment_5_2/notebooks/dev/venkatesh_talasila/conf/job_catalog/: local.yml
Assignment_5_2/notebooks/reference/conf/data_catalog/: local.yml
Assignment_5_2/src/: main.py  train.py
(+70 files in other folders)
