# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mle_training_TA_venkatesh"
version = "0.3"
authors = [ {name="Talasila Venkatesh", email="venkatesh.talasi@tigeranalytics.com"} ]
description = "A package on house value prediction"
readme = "README.md"


[project.urls]
"Homepage" = "https://github.com/venky3001/mle-training"